@@ -9,6 +9,7 @@
         <import addon="xbmc.python" version="2.0"/>
         <import addon="script.common.plugin.cache" version="0.9.1"/>
         <import addon="script.module.requests" version="1.1.0"/>
+        <import addon="script.module.urlresolver" version="2.0.9"/>
     </requires>
 
     <extension point="xbmc.python.pluginsource" library="animeavenue.py">
